# mylly-example

./: .gitmodules  CMakeLists.txt  README.md  asteroid.cpp  asteroid.h  asteroidhandler.cpp  asteroidhandler.h  collisionhandler.cpp  entity.cpp  entity.h  game.cpp  game.h  gamedefs.h  gamescene.cpp  gamescene.h  inputhandler.cpp  inputhandler.h  main.cpp  menuscene.cpp  menuscene.h  powerup.cpp  powerup.h  projectile.cpp  projectile.h  scene.cpp  scene.h  ship.cpp  ship.h  ufo.cpp  ufo.h  ui.cpp  ui.h  utils.cpp  utils.h  warpeffect.cpp  warpeffect.h
resources/: credits.txt
resources/effects/: asteroid-debris.fx  asteroid-dust.fx  asteroid-explosion.fx  asteroid-smoke.fx  engine-trail.fx  explosion-smoke.fx  ftl.fx  ftl2.fx  projectile-hit.fx  projectile-trail.fx  projectile2-hit.fx  projectile2-trail.fx  ship-explosion-debris.fx  ship-explosion.fx  smoke-ring.fx
resources/fonts/: fonts.txt
resources/models/: crate.mtl  plane.mtl  rock01.mtl  ufo.mtl
resources/shaders/: effect-bloom.glsl
resources/textures/: explosion_atlas.sprite  gloweffect-purple.sprite  shipicons.sprite
